--- a/.github/workflows/treinazapng.yml
+++ b/.github/workflows/treinazapng.yml
@@ -8,7 +8,13 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
+      - uses: dopplerhq/cli-action@v1
+      - name: set envs agent githubs action
+        run: doppler secrets download --no-file --format=docker >> $GITHUB_ENV
+        env: 
+           DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN_PRD }}
       - uses: actions/setup-node@v1
+      
         with:
           node-version: 12.21.0
 
@@ -17,7 +23,5 @@ jobs:
         env:
            CI: "false"
       - name: DEPLOY S3
-        run: cd build && AWS_ACCESS_KEY_ID=${CHAVE} AWS_SECRET_ACCESS_KEY=${SENHA} aws s3 sync . s3://treinazapng --acl public-read --delete
-        env:
-           CHAVE: ${{ secrets.ACCESS_KEY }}
-           SENHA: ${{ secrets.SECRET_KEY }}
+        run: cd build && AWS_ACCESS_KEY_ID=${ACCESS_KEY} AWS_SECRET_ACCESS_KEY=${SECRET_KEY} aws s3 sync . s3://treinazapng --acl public-read --delete
+        
