--- a/.github/workflows/treinazapng.yml
+++ b/.github/workflows/treinazapng.yml
@@ -17,6 +17,8 @@ jobs:
       
         with:
           node-version: 12.21.0
+      - name: SET ENV FIREBASE
+        run: envsubst <src/firebase-deploy.js> src/firebase.js 
 
       - name: INSTALL E BUILD
         run: npm install && npm run build
