--- a/.github/workflows/treinazapng.yml
+++ b/.github/workflows/treinazapng.yml
@@ -24,6 +24,10 @@ jobs:
         run: npm install && npm run build
         env:
            CI: "false"
+      - name: BAIXANDO SONAR
+        run: wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.0.2311-linux.zip && unzip sonar-scanner-cli-4.6.0.2311-linux.zip
+      - name: ANALYSYS CODE
+        run: ./sonar-scanner-4.6.0.2311-linux/bin/sonar-scanner -Dsonar.projectKey=treinazapng -Dsonar.sources=. -Dsonar.host.url=http://sonar.joaovictor.cf/ -Dsonar.login=${VAR_SONAR}
       - name: DEPLOY S3
         run: cd build && AWS_ACCESS_KEY_ID=${ACCESS_KEY} AWS_SECRET_ACCESS_KEY=${SECRET_KEY} aws s3 sync . s3://treinazapng --acl public-read --delete
       - name: CLEAR CACHE DEPLOY 
