--- a/.github/workflows/treinazapngECS.yml
+++ b/.github/workflows/treinazapngECS.yml
@@ -1,4 +1,4 @@
-name: Deploy Devs ECS
+name: Deploy Devs
 
 on:
   workflow_dispatch:
@@ -24,19 +24,22 @@ jobs:
         run: npm install && npm run build
         env:
            CI: "false"
-      - name: BAIXANDO SONAR
-        run: wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.0.2311-linux.zip && unzip sonar-scanner-cli-4.6.0.2311-linux.zip
-      - name: ANALYSYS CODE
-        run: ./sonar-scanner-4.6.0.2311-linux/bin/sonar-scanner -Dsonar.projectKey=treinazapng -Dsonar.sources=. -Dsonar.host.url=http://sonar.joaovictor.cf/ -Dsonar.login=${VAR_SONAR}
+     # - name: BAIXANDO SONAR
+     #   run: wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.0.2311-linux.zip && unzip sonar-scanner-cli-4.6.0.2311-linux.zip
+     # - name: ANALYSYS CODE
+     #   run: ./sonar-scanner-4.6.0.2311-linux/bin/sonar-scanner -Dsonar.projectKey=treinazapng -Dsonar.sources=. -Dsonar.host.url=http://sonar.joaovictor.cf/ -Dsonar.login=${VAR_SONAR}
+      
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ env.ACCESS_KEY }}
           aws-secret-access-key: ${{ env.SECRET_KEY }}
           aws-region: us-east-1
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
@@ -44,9 +47,11 @@ jobs:
           ECR_REPOSITORY: 688728383808.dkr.ecr.us-east-1.amazonaws.com/treinazapng
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t treinazapng .
-          docker tag treinazapng:latest $ECR_REPOSITORY:latest
+          docker build -t treinazap .
+          docker tag treinazap:latest $ECR_REPOSITORY:latest
           docker push $ECR_REPOSITORY:latest
-          aws ecs update-service --cluster infojvtech --service treinazapng --force-new-deployment --region us-east-1
-      - name: CLEAR CACHE DEPLOY 
-        run: AWS_ACCESS_KEY_ID=${ACCESS_KEY} AWS_SECRET_ACCESS_KEY=${SECRET_KEY} aws cloudfront create-invalidation --distribution-id ${VAR_CFDIST} --path '/*'
+    #    aws ecs update-service --cluster unicorniostech --service treinazap --force-new-deployment --region us-east-1
+
+      
+     # - name: CLEAR CACHE DEPLOY 
+     #  run: AWS_ACCESS_KEY_ID=${ACCESS_KEY} AWS_SECRET_ACCESS_KEY=${SECRET_KEY} aws cloudfront create-invalidation --distribution-id ${VAR_CFDIST} --path '/*'
