--- a/.github/workflows/treinazapngECS.yml
+++ b/.github/workflows/treinazapngECS.yml
@@ -24,10 +24,10 @@ jobs:
         run: npm install && npm run build
         env:
            CI: "false"
-     # - name: BAIXANDO SONAR
-     #   run: wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.0.2311-linux.zip && unzip sonar-scanner-cli-4.6.0.2311-linux.zip
-     # - name: ANALYSYS CODE
-     #   run: ./sonar-scanner-4.6.0.2311-linux/bin/sonar-scanner -Dsonar.projectKey=treinazapng -Dsonar.sources=. -Dsonar.host.url=http://sonar.joaovictor.cf/ -Dsonar.login=${VAR_SONAR}
+      - name: BAIXANDO SONAR
+        run: wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.0.2311-linux.zip && unzip sonar-scanner-cli-4.6.0.2311-linux.zip
+      - name: ANALYSYS CODE
+        run: ./sonar-scanner-4.6.0.2311-linux/bin/sonar-scanner -Dsonar.projectKey=treinazapng -Dsonar.sources=. -Dsonar.host.url=http://sonar.joaovictor.cf/ -Dsonar.login=${VAR_SONAR}
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -50,8 +50,8 @@ jobs:
           docker build -t treinazap .
           docker tag treinazap:latest $ECR_REPOSITORY:latest
           docker push $ECR_REPOSITORY:latest
-    #    aws ecs update-service --cluster unicorniostech --service treinazap --force-new-deployment --region us-east-1
+          aws ecs update-service --cluster infojvtech --service treinazap --force-new-deployment --region us-east-1
 
       
-     # - name: CLEAR CACHE DEPLOY 
-     #  run: AWS_ACCESS_KEY_ID=${ACCESS_KEY} AWS_SECRET_ACCESS_KEY=${SECRET_KEY} aws cloudfront create-invalidation --distribution-id ${VAR_CFDIST} --path '/*'
+      - name: CLEAR CACHE DEPLOY 
+        run: AWS_ACCESS_KEY_ID=${ACCESS_KEY} AWS_SECRET_ACCESS_KEY=${SECRET_KEY} aws cloudfront create-invalidation --distribution-id ${VAR_CFDIST} --path '/*'
